--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Rychlé občertvení - Plzeň Borská pole" />
+    <meta name="author" content="tes@rek" />
 	<title>{ifset title}{include title|stripHtml} | {/ifset}Sváčostánek</title>
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
 	<!-- Font Awesome icons (free version)-->
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
 	<!-- Core theme CSS (includes Bootstrap)-->
 	<link href="css/styles.css" rel="stylesheet" />
+	<link href="css/styles-{$layoutColor}.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -22,18 +23,20 @@
 	<!-- Navigation-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
 		<a class="navbar-brand js-scroll-trigger" href="#page-top">
-			<span class="d-block d-lg-none">Clarence Taylor</span>
-			<span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+			<span class="d-block d-lg-none">Sváčostánek</span>
+			<span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/logo-{$layoutColor}.jpg" alt="logo" /></span>
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">O nás</a></li>
+				{*
 				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
 				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
 				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
 				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
 				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+				*}
 			</ul>
 		</div>
 	</nav>
@@ -42,6 +45,9 @@
 		<!-- About-->
 		<section class="resume-section" id="about">
 			<div class="resume-section-content">
+
+				<img alt="poster" src="images/poster-{$layoutColor}.jpg" class="img-fluid">
+{*
 				<h1 class="mb-0">
 					Clarence
 					<span class="text-primary">Taylor</span>
@@ -52,13 +58,22 @@
 				</div>
 				<p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
 				<div class="social-icons">
+*}
+
+{*
 					<a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
 					<a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
 					<a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+
 					<a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+					<a class="social-icon" href="#!"><i class="fa-brands fa-square-instagram"></i></a>
+*}					
+
 				</div>
 			</div>
 		</section>
+
+{*		
 		<hr class="m-0" />
 		<!-- Experience-->
 		<section class="resume-section" id="experience">
@@ -219,6 +234,7 @@
 				</ul>
 			</div>
 		</section>
+*}
 	</div>
 
 	{include content}
