--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -14,7 +14,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
 	<!-- Core theme CSS (includes Bootstrap)-->
 	<link href="css/styles.css" rel="stylesheet" />
-	<link href="css/styles-{$layoutColor}.css" rel="stylesheet" />
+	{*<link href="css/styles-{$layoutColor}.css" rel="stylesheet" />*}
+	<link href="css/custom.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -24,12 +25,13 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
 		<a class="navbar-brand js-scroll-trigger" href="#page-top">
 			<span class="d-block d-lg-none">Sváčostánek</span>
-			<span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/logo-{$layoutColor}.jpg" alt="logo" /></span>
+			<span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/logo-black.jpg" alt="logo" /></span>
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav">
 				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">O nás</a></li>
+				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contacts">Kontakty</a></li>
 				{*
 				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
 				<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
@@ -43,10 +45,45 @@
 	<!-- Page Content-->
 	<div class="container-fluid p-0">
 		<!-- About-->
-		<section class="resume-section" id="about">
+		<section class="resume-section px-0 py-4" id="about">
 			<div class="resume-section-content">
 
-				<img alt="poster" src="images/poster-{$layoutColor}.jpg" class="img-fluid">
+				<h1>Přistupte všichni, kdož chcete být nasyceni</h1>
+
+				<div class="logo">
+					<img alt="logo" src="images/logo.png" class="img-fluid">
+				</div>
+
+				<ul class="fa-ul">
+					<li>
+						výběrová káva s sebou
+					</li>
+					<li>
+						kvalitní uzeniny (sekaná, klobása, párek v rohlíku)
+					</li>
+					<li>
+						čerstvé bagety
+					</li>
+					<li>
+						domácí polévky
+					</li>
+					<li>
+						nápoje
+					</li>
+					<li>
+						dezerty a lahůdky
+					</li>
+				</ul>
+
+				<p class="mt-3 mb-2"><strong>Najdete nás na Borských polích v Obchodní ulici naproti Makru<strong></p>
+
+				<div class="map">
+					<img alt="map" src="images/map.png" class="img-fluid">
+				</div>
+
+				<p class="mt-2"><strong>Otevřeno každý pracovní den od 5:30 do 15:30<strong></p>
+
+
 {*
 				<h1 class="mb-0">
 					Clarence
@@ -67,11 +104,77 @@
 
 					<a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
 					<a class="social-icon" href="#!"><i class="fa-brands fa-square-instagram"></i></a>
-*}					
-
 				</div>
+*}
 			</div>
 		</section>
+
+		<section class="resume-section px-0 py-4" id="contacts">
+			<div class="resume-section-content">
+
+				<div class="row d-flex justify-content-center">
+					<div class="col-md-3 col-sm-12 col-12 mt-3">
+						<div class="card-box">
+								<ul class="fa-ul contacts">
+									<li>
+										Sváčostánek
+									</li>
+									<li>
+										Obchodní ul. č 9
+									</li>
+									<li>
+										318 00 Plzeň
+									</li>
+									<li>
+										<a href="https://www.svacostanek.cz">www.svacostanek.cz</a>
+									</li>		
+									<li>
+										<a href="mailto:svacostanek(at)gmail.com"> svacostanek(at)gmail.com</a>
+									</li>
+								</ul>
+						</div>
+					</div>
+						
+					<div class="col-md-3 col-sm-12 col-12 mt-3">
+						<div class="card-box">
+							<ul class="fa-ul contacts">
+								<li>
+									Aleš Kadlec
+								</li>
+								<li>
+									Waltrova 977/2
+								</li>
+								<li>
+									318 00 Plzeň
+								</li>
+								<li>
+									IČO: 06311385
+								</li>
+								<li>
+									DIČ: CZ8304211443
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+		
+				<div class="row d-flex justify-content-center mt-3">
+
+					<div class="col-md-3 col-sm-2 col-2 social">
+						<a class="social-icon" href="https://www.facebook.com/profile.php?id=61554558127335/"><i class="fab fa-facebook-f"></i></a>
+					</div>
+					<div class="col-md-3 col-sm-2 col-2 social">
+						<a class="social-icon" href="https://www.instagram.com/svacostanek/"><i class="fa-brands fa-square-instagram"></i></a>
+					</div>
+				</div>
+
+			</div>
+
+		</section>
+
+
+
 
 {*		
 		<hr class="m-0" />
@@ -249,3 +352,25 @@
 	{/block}
 </body>
 </html>
+
+
+
+    <div class="col-md-12 mt-3">
+          <div class="row mt-3">
+            <div class="col-md-6">
+
+
+
+
+            </div>
+
+            <div class="col-md-6">
+
+            </div>
+
+
+
+          </div>
+        </div>
+      
+    </div>
